2008-11-28  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/unix_update.c (set_password): Allow root to change
	passwords without verification of the old ones.

	* modules/pam_tally2/pam_tally2.c (tally_check): Fix info format
	to be the same as in pam_tally.

	* configure.in: Add modules/pam_timestamp/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_timestamp.xml.
	* doc/sag/pam_timestamp.xml: New.
	* libpam/pam_static_modules.h: Add pam_timestamp static struct.
	* modules/Makefile.am: Add pam_timestamp directory.
	* modules/pam_timestamp/Makefile.am: New.
	* modules/pam_timestamp/README.xml: New.
	* modules/pam_timestamp/hmacsha1.h: New.
	* modules/pam_timestamp/sha1.h: New.
	* modules/pam_timestamp/pam_timestamp.8.xml: New.
	* modules/pam_timestamp/pam_timestamp_check.8.xml: New.
	* modules/pam_timestamp/pam_timestamp.c: New.
	* modules/pam_timestamp/pam_timestamp_check.c: New.
	* modules/pam_timestamp/hmacfile.c: New.
	* modules/pam_timestamp/hmacsha1.c: New.
	* modules/pam_timestamp/sha1.c: New.
	* modules/pam_timestamp/tst-pam_timestamp: New.
	* po/POTFILES.in: Add pam_timestamp sources.
	* po/*.po: Regenerate.
	* po/cs.po: Updated translations.

2008-11-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_pwhistory/opasswd.c (save_old_password): Fix typo.

	* modules/pam_time/pam_time.c (is_same): Fix check
	of correct string length (debian bug #326407).

2008-11-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Add pam_time1 tests.
	* xtests/tst-pam_time1.c: New test case.
	* xtests/tst-pam_time1.pamd: New.
	* xtests/time.conf: New.
	* xtests/run-xtests.sh: Copy time.conf.

2008-11-24  Tomas Mraz <t8m@centrum.cz>

	* libpam/pam_handlers.c (_pam_parse_conf_file): '-' at
	beginning of type token marks silent module.
	(_pam_load_module): Add handler_type parameter. Do not log
	module load error if module is silent.
	(_pam_add_handler): Pass handler_type to _pam_load_module().
	* libpam/pam_private.h: Add PAM_HT_SILENT_MODULE.